Fix some styling, hopefully final version

--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -194,11 +194,11 @@ Five years ago, CCCS received 1,400 XO laptops, low-cost computers developed by 
                 Chester Pets & 5 & 3 & 3 \\
                 \end{tabular}
                 \captionsetup{width=\onecolwid}
-                \caption{Number of times each game was chosen as one of the top games in each category from a survey on a group of 6 teachers.\label{favorites}}
+                \caption{Games chosen as top in each category from a survey of 6 teachers.\label{favorites}}
             \end{table}
 			}	
 	\end{block}
-	  \vskip2ex
+	  \vskip1ex
 
 	  \begin{alertblock}{Conclusion}
 	    \rmfamily{The goal of the Educational Game Design class is for students to gain hard programming skills, soft human interaction skills, and experience the value of writing software with a real-world impact. In the past, programming has required a majority portion of the course and reduced the amount of time that can be spent eliciting input from teachers and designing, testing, and deploying games. The creation of Platipy, Spyral, and Conspyre have reduced the amount of time undergraduates spent learning frameworks and optimizing their games, allowing them to focus more on their soft skills and the high-level educational game design process. As evidenced by the data gathered from CCCS teachers, the quality of games created after introducing our tools has increased significantly, leading to students with a better appreciation for the impact of educational games.  
@@ -207,13 +207,15 @@ Five years ago, CCCS received 1,400 XO laptops, low-cost computers developed by 
 	  \end{alertblock}
 
 		\begin{block}{Future Work}
-			\rmfamily{There is significant room for improvement in Platipy, Spyral, and Conspyre going forward. We plan to expand Platipy to include more complete examples, including downloads of projects from previous semesters, and better coverage of the full Spyral API. We also plan on compiling a list of useful resources for game programmers including information on developing basic AI agents, incorporating multiplayer, and obtaining royalty-free audio and video. Additionally, every semester we elicit feedback from students using Spyral, and we plan to add more features to address common concerns and use cases. Lastly, Conspyre will receive additional work that includes more complete examples and the potential for an offline mode that allows syncing when network access is available. }
+			\rmfamily{There is significant room for improvement in Platipy, Spyral, and Conspyre going forward. We plan to expand Platipy to include more complete examples, including downloads of projects from previous semesters, and better coverage of the full Spyral API. We also plan on compiling a list of useful resources for game programmers including information on developing basic AI, incorporating multiplayer, and obtaining royalty-free artwork. Spyral will have additional features added based on the feedback from each semester of the course. Lastly, Conspyre will include more complete examples and the potential for an offline mode that allows syncing when network access is available. }
 		\end{block}
         \vskip1ex
         \begin{block}{References}
             \rmfamily{
                 \bibliographystyle{te}
+                \small{
                 \bibliography{poster}
+                }
             }
         \end{block}
 
