Make column 3 just a little bit longer

--- a/CHEP 13/poster.tex
+++ b/CHEP 13/poster.tex
@@ -162,7 +162,7 @@ Five years ago, CCCS received 1,400 XO laptops, low-cost computers developed by 
         
         \begin{block}{Teacher Surveys}
               \rmfamily{
-                    We selected a subset of the games from semesters of Educational Game Development before and after the introduction of Spyral. A group of teachers from CCCS then examined the games and rated their reactions in four different categories: how fun are the games, how well do the games evaluate a student's skills, how well does the game teach students new skills, and how useful the game would be in their classroom. The average of the survey responses are shown in Figure \ref{reaction}, divided by whether spyral was used in the creation of these games. Additionally, we asked the teachers to choose the two games which they believed to be the best, and the results are shown in Table \ref{favorites}.
+                    In order to measure whether there was improvement as our resources were integrated into Educational Game Development, we selected a subset of the games from semesters of class before and after the introduction of Spyral and Platipy. A group of teachers from CCCS then examined the games and rated their reactions in four different categories: how fun are the games, how well do the games evaluate a student's skills, how well does the game teach students new skills, and how useful the game would be in their classroom. The average of the survey responses are shown in Figure \ref{reaction}, divided by whether spyral was used in the creation of these games. Additionally, we asked the teachers to choose the two games which they believed to be the best, and the results are shown in Table \ref{favorites}.
       		}
         \end{block}
         \vskip2ex
